k8s/aws-eks/postgres/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
spec:
  type: ExternalName
  externalName: database-xxxxxx.yyyyyyy.zzzzz.rds.amazonaws.com
